@@ -23,7 +23,6 @@
 
 #include <phonon/abstractmediastream.h>
 #include <torrent/torrentfilestream.h>
-#include <boost/concept_check.hpp>
 
 namespace bt
 {
